--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: Calibry;  
+    font-family: Calibry;
+
 }
 
 header{
@@ -42,24 +43,33 @@ ul li a:hover{
 }
 
 .title{
+    width: 100%;
+    height: auto;
     position: absolute;
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
 }
 
 .title h1{
     color: #3B3A37;
     font-size: 110px;
+    overflow: hidden;
 }
 
 .timer{
+    margin-top: 90px;
+    width: 100%;
+    height: auto;
     position: absolute;
-    top: 60%;
+    top: 65%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
     font-size: 110px;
     color: #3B3A37;
+    overflow: hidden;
 }
 
 .count span{
